2010-01-01  Juri Linkov  <juri@jurta.org>

	* comint.el (comint-input-ring-size): Make it a defcustom and
	increase the default to 500 (Bug#5148).

2009-12-31  Nick Roberts  <nickrob@snap.net.nz>

	Further changes from EMACS_23_1_RC branch (2009-12-29 contd).
	* term/x-win.el (x-gtk-stock-map): Map some GUD buttons.
	* progmodes/gud.el (gud-menu-map): Add reverse-execution commands.

2009-12-30  Nick Roberts  <nickrob@snap.net.nz>

	Show working revision correctly for mercurial.
	* vc-hg.el (vc-hg-working-revision): Use hg parent instead of
	hg log as suggested by Alex Harsanyi <alexharsanyi@gmail.com>,

2009-12-29  Juanma Barranquero  <lekktu@gmail.com>

	Declare some functions for the byte-compiler.
	* progmodes/gdb-ui.el (speedbar-change-initial-expansion-list)
	(speedbar-timer-fn, speedbar-change-expand-button-char)
	(speedbar-delete-subblock, speedbar-center-buffer-smartly): Declare.

2009-12-29  Nick Roberts  <nickrob@snap.net.nz>

	This changeset reverts GDB Graphical Interface to use annotations.
	* progmodes/gdb-ui.el, progmodes/gud.el: Import from EMACS_23_1_RC.

2009-12-29  Dan Nicolaescu  <dann@ics.uci.edu>

	Make vc-dir work on subdirectories of the bzr root.
	* vc-bzr.el (vc-bzr-after-dir-status): Add new argument.  Return
	file names relative to it.
	(vc-bzr-dir-status, vc-bzr-dir-status-files): Pass the bzr root
	relative directory to vc-bzr-after-dir-status.

2009-12-28  Tassilo Horn  <tassilo@member.fsf.org>

	* font-lock.el (font-lock-refresh-defaults): New function, which
	can be used to let font-lock react to external changes in
	variables like font-lock-defaults and keywords.
	See http://thread.gmane.org/gmane.emacs.devel/118777/focus=118802

2009-12-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-rcs.el (vc-rcs-register): Fix registering a specific version.

	* vc-bzr.el (vc-bzr-log-view-mode): Fix short log regexp.

2009-12-28  Juanma Barranquero  <lekktu@gmail.com>

	Supersede color.diff settings in git log (bug#5211).
