@@ -1,3 +1,7 @@
+2010-01-01  Chong Yidong  <cyd@stupidchicken.com>
+
+	* files.el (minibuffer-with-setup-hook): Doc fix (Bug#5149).
+
 2010-01-01  Juri Linkov  <juri@jurta.org>
 
 	* comint.el (comint-input-ring-size): Make it a defcustom and
